# mute

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: build_publish.yml  pr_tests.yml
docs/: Installing_PROPOSAL_on_a_Mac.md  Tutorial.md  Tutorial_Cluster.md  Tutorial_Labs.md  Tutorial_Models.md
examples/: example_angular_distribution.ipynb  example_energy.ipynb  example_load_survival_probability_tensor.ipynb  example_mountain_calculations.ipynb  example_mountain_profile.txt  example_primary_flux_models.ipynb  example_seasonal_variations.ipynb  example_total_flux_plot.ipynb  example_underground_flux.ipynb  example_vertical_intensities.ipynb
examples/cluster/: example_cluster.py  example_submission.sh
mute/: __init__.py  constants.py  propagation.py  surface.py  underground.py
mute/tests/: test_intensities.py  test_propagation.py  test_s_fluxes.py  test_s_tot_flux.py  test_tot_fluxes.py  test_total_flux.py  test_u_tot_flux.py
mute/tests/surface/: Surface_Fluxes_USStd_None_SIBYLL-2.3c_GSF.txt  Surface_Fluxes_USStd_None_SIBYLL-2.3c_HG.txt
mute/tests/surface_fluxes/: Surface_Fluxes_USStd_SIBYLL-2.3c_GSF.txt
src/mute/: __init__.py  constants.py  propagation.py  surface.py  underground.py
tests/: example_mountain_profile.txt  test_intensities.py  test_propagation.py  test_s_fluxes.py  test_spectra.py  test_tot_fluxes.py
