[metadata]
name = mute
version = file: mute/_version.py
author = William Woodley
author_email = wwoodley@ualberta.ca
description = Muon Intensity Code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wjwoodley/mute
project_urls =
    Bug Tracker = https://github.com/wjwoodley/mute/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License

[options]
packages = find:
install_requires =
    mceq
    numpy
    requests
    scipy
    tqdm
python_requires = >=3.6
include_package_data = True
